--- a/HW-4.ipynb
+++ b/HW-4.ipynb
@@ -27,7 +27,7 @@
     "import requests\n",
     "df=open(\"c:/temp/dests.txt\")\n",
     "#dic_cuntry=dic()\n",
-    "api_key = 'AIzaSyBq-h5FKB2zKn0rgFh9LK0OxkAWkqkgDJk'\n",
+    "api_key = 'api_user'\n",
     "origins=\"Jerusalem\"\n",
     "dic_cun={}"
    ]
